--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <title>Guessing the Number </title>
 </head>
 <body>
-    
+    <h1> Guessing the Number</h1>
+    <p> Need to select the Number between 1-20. if you can guess it .</p>
+  
+    <div class="form">
+        <label for="guessName">
+        Enter your Nummber
+        </label>
+        <input type="number" id="guessName" class="guessName">
+        <input type="submit" value="submit" class="guessSubmit" id="submitguerss">
+    </div>
 </body>
 <script src="script.js"/>
 </html>
