--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guessing the Number </title>
 </head>
+
 <body>
     <h1> Guessing the Number</h1>
     <p> Need to select the Number between 1-20. if you can guess it .</p>
   
     <div class="form">
-        <label for="guessName">
+        <label for="guessField">
         Enter your Nummber
         </label>
-        <input type="number" id="guessName" class="guessName">
-        <input type="submit" value="submit" class="guessSubmit" id="submitguerss">
+        <input type="number" id="guessField" class="guessField">
+        <input type="submit" value="Submit Guess" class="guessSubmit" id="submitguess">
     </div>
+    <script src="script.js"></script>
 </body>
-<script src="script.js"/>
+
 </html>
