--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guessing the Number </title>
 </head>
+<link rel="stylesheet" href="style.css">
 
 <body>
+    <div class="container">
     <h1> Guessing the Number</h1>
     <p> Need to select the Number between 1-20. if you can guess it .</p>
   
     <div class="form">
-        <label for="guessField">
-        Enter your Nummber
+        <label for="guessField" class="guessField">
+        Enter your Number
         </label>
         <input type="number" id="guessField" class="guessField">
         <input type="submit" value="Submit Guess" class="guessSubmit" id="submitguess">
+    </div>
     </div>
     <script src="script.js"></script>
 </body>
